# oauth-app-automator

./: .env.example  .env.production  .gitignore  CHANGELOG.md  README.md  github_oauth_automator.py  google_oauth_automator.py  install-cli.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run-google.sh  run.sh  setup.sh  version_check.py
scripts/: install.sh  setup.sh
src/oauth_automator/: __init__.py  __main__.py
src/oauth_automator/core/: __init__.py  browser.py  logging.py  version.py
src/oauth_automator/github/: __init__.py  audit.py  automator.py  cli.py  config.py  manager.py  selectors.py
src/oauth_automator/google/: __init__.py  automator.py  cli.py  config.py  manager.py  selectors.py
src/oauth_automator/utils/: __init__.py  clipboard.py  env.py  prompts.py
tests/: test_version_check.py
