[project]
name = "github-oauth-automator"
version = "1.4.1"
description = "Automate GitHub OAuth app creation via browser automation"
authors = [{name = "Remco Stoeten"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
]
license = {text = "MIT"}

[project.scripts]
create-github-oauth = "github_oauth_automator:main"
create-google-oauth = "google_oauth_automator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
